Prepared POM to handle Java8 and Java9.
Added project specific jvm.config to enable configuration of JPMS.
Restructured compiler plugin config to enbable Java8 builds and Java 9
builds.
TestFX still does not work when Java9 is used.