@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.sample</groupId>
-    <artifactId>fxml-sample</artifactId>
+    <groupId>net.raumzeitfalle.fxsamples.pocketcalculator</groupId>
+    <artifactId>EnterpriseAppSample</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -19,11 +19,43 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                            <configuration>
+                            <!-- compile everything to ensure module-info contains right entries -->
+                            <!-- required when JAVA_HOME is JDK 8 or below -->
+                            <jdkToolchain>
+                                <version>9</version>
+                            </jdkToolchain>
+                            <release>9</release>
+                            <compilerArgs>
+                                <arg>-J--add-reads javafx.graphics/javafx.stage=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens javafx.graphics/javafx.stage=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports javafx.graphics/javafx.stage=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>base-compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <!-- recompile everything for target VM except the module-info.java -->
+                        <configuration>
+                            <excludes>
+                                <exclude>module-info.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
                 <configuration>
+                    <!-- jdkToolchain required when JAVA_HOME is JDK 9 or above -->
+                    <jdkToolchain>
+                        <version>[1.8,9)</version>
+                    </jdkToolchain>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
             <plugin>
